[package]
name = "tb_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.25"
ratatui = { version = "0.26.3", features = ["crossterm"] }
tempfile = "3.8"
signal-hook = "0.3"
clap = { version = "4.5.39", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
